--- a/24找房租房.md
+++ b/24找房租房.md
@@ -32,7 +32,7 @@
 | ST-JUSTIN                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里           | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://justinus.ch/en/?cn-reloaded=1>                                                                                                                                                                                                          |
 | 学联合作伙伴&#xA;INTERMEZZO                    | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | Alex小哥，请用英语或德语沟通，微信号：Alex\_Intermezzo                                                                                                                                                                                                            |
 | 微信群内转租                                   | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                    | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | &#xA;微信群（新生群、二手群、学联活动群等）&#xA;                                                                                                                                                                                                                    |
-| 学联论坛                                     | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                   | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | <https://forum.acssz.org/>\*\*\*\*                                                                                                                                                                                                               |
+| 学联论坛                                     | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                   | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | <https://forum.acssz.org/>                                                                                                                                                                                                                       |
 
 ***
 
