--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -5,14 +5,14 @@
 **以下网站可以在线云找房**：
 
 * **Student Village**: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）
+* **Living Sceinece**: <https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0> 有基本家具，拎包入住（仅限ETH学生）
 
-> 一般不太可能通过SV官网找到房，而是通过Facebook群组和微信群。
+> 一般不太可能通过SV和LS官网找到房，而是通过Facebook群组和微信群
 >
 > Facebook群组链接<https://www.facebook.com/groups/934381236673846>
 >
-> 微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入。
+> 微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入
 
-* **Living Sceinece**: <https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0> 有基本家具，拎包入住（仅限ETH学生）
 * **学生WOKO**：<http://www.woko.ch/> 有基本家具，拎包入住。年龄限制，28或以下。若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
 * **学生JUWO**: <http://www.juwo.ch/> 没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
 * **学联论坛**上租房信息：<https://forum.acssz.org/>
@@ -25,7 +25,7 @@
 
 除此外，以下网站可尝试云找房，但多数情况下是需要现场看房的：
 
-* 其它WG租房网站：
+* 其它找房网站：
 
 > <https://www.wfss.ch/>
 >
