--- a/24找房租房.md
+++ b/24找房租房.md
@@ -1,9 +1,10 @@
 #### **1. 临时过渡住所**
 
-* 酒店：酒店价格会比较高，适合极短期（一周内）。
-* 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠。
+* 酒店：酒店价格会比较高，适合极短期（一周内）
+* 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠
 * 学长学姐/朋友家
-* 群里的短租：自行甄别筛选。
+* 群里的短租：自行甄别筛选
+* *有些青年旅馆或酒店居住时长超过1个月会签租房合同（提前与酒店确认），可以拿这个合同去居委会报到*
 
 ^
 
