--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -12,7 +12,7 @@
 
 ^
 
-#### **1. 强制保险义务**
+#### **1. 强制保险义务**（**VVG/KVG**）
 
 **健康保险在瑞士是强制性的吗**？
 是的。任何在瑞士逗留超过3个月的人都必须购买健康保险。确保你有足够的保险是你自己的责任。
@@ -51,9 +51,9 @@
 
 ^
 
-#### **2**. **国际学生的保险选择**
+#### **2**. **国际学生的保险选择——VVG保险**
 
-**是否有提供足够保险的廉价学生套餐**？
+**是否有VVG学生保险套餐可供选择**？
 
 是的，有几家公司以合理的价格为国际学生提供套餐。要了解更多信息，请访问[ETH国际学生健康保险网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543)。如果你不确定，你可以联系[交流办公室](https://ethz.ch/de/studium/non-degree-angebote/austausch-und-gaststudium.html)（如果你是交流生）或[国际学生办公室](https://ethz.ch/de/studium/international.html)（如果你是本科生或硕士生）。
 
@@ -79,11 +79,11 @@
 
 ^
 
-#### **3**. **豁免强制保险义务**
+#### **3**. **购买VVG保险**，**豁免KVG保险**
 
 > <https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html>
 
-**抵达瑞士后3个月内**，你需要申请豁免。
+**抵达瑞士后3个月内**，你需要购买VVG学生保险并申请豁免KVG保险。
 
 ^
 
@@ -97,7 +97,7 @@
 
 **豁免的期限**
 
-豁免期为3年，确切的日期可以在你的确认信中找到，你会通过电子邮件从卫生局收到。请在你的日历上记下这个日期，并确保你在第一个豁免期到期之前申请新的豁免。程序是一样的。豁免的最长期限是6年。6年后，你将不得不购买 “正常”的KVG保险。
+豁免期为3年，确切的日期可以在你的确认信中找到，你会通过电子邮件从卫生局收到。请在你的日历上记下这个日期，并确保你在第一个豁免期到期之前申请新的豁免，申请程序是一样的。豁免的最长期限是6年。6年后，你将不得不购买 “正常”的KVG保险。
 
 ^
 
