--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -29,19 +29,19 @@
 
 ^
 
-**如果我在投保健康保险之前生病或发生事故会怎样**？
+**如果我在购买健康保险之前生病或发生事故会怎样**？
 
-你在事故/疾病发生后选择的保险将追溯到你。所有的健康保险公司都有义务将你纳入基本保险，而无需进行健康检查。如果你想购买学生保险套餐（根据VVG），我们建议你在抵达后尽快办理。
+你在事故/疾病发生后选择的保险将追溯到你入境之日。所有的健康保险公司都有义务将你纳入基本保险，而无需进行健康检查。如果你想购买学生保险套餐（根据VVG），我们建议你在抵达后尽快办理。
 
 ^
 
 **我可以在出发前申请瑞士健康保险吗**？
 
-不可以，你应该等到你到达瑞士并申请了居留证之后再申请。然后，你居住地的主管部门会通知你医疗保险的义务。
+不可以，你应该等到你到达瑞士并申请了居委会的报到证（Meldebestätigung）之后再申请。然后，你居住地的主管部门会通知你医疗保险的义务。
 
-如果你住在苏黎世市，当你在区政府登记居留证时，你会收到一封关于苏黎世强制医疗保险的信息函。请遵循信中的指示。请参考样本信:attachment[sample-letters.pdf]{src=".topwrite/assets/sample-letters.pdf" size="1.75 MB"}
+如果你住在苏黎世市，当你在居委会登记居留证时，你会收到一封关于苏黎世强制医疗保险的信息函。请遵循信中的指示。请参考样本信:attachment[sample-letters.pdf]{src=".topwrite/assets/sample-letters.pdf" size="1.75 MB"}
 
-如果你不是住在苏黎世市，程序因市镇的不同而不同。当你注册居留证的时候，你也应该询问那里关于医疗保险的通常程序。
+如果你不是住在苏黎世市，程序因市镇的不同而不同。当你在居委会报到并申请居留证的时候，你也应该询问那里关于医疗保险的通常程序。
 
 ^
 
@@ -53,9 +53,9 @@
 
 #### **2**. **国际学生的保险选择——VVG保险**
 
-**是否有VVG学生保险套餐可供选择**？
+**是否有实惠的VVG学生保险套餐可供选择**？
 
-是的，有几家公司以合理的价格为国际学生提供套餐。要了解更多信息，请访问[ETH国际学生健康保险网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543)。如果你不确定，你可以联系[交流办公室](https://ethz.ch/de/studium/non-degree-angebote/austausch-und-gaststudium.html)（如果你是交流生）或[国际学生办公室](https://ethz.ch/de/studium/international.html)（如果你是本科生或硕士生）。
+有的，有几家公司以合理的价格为国际学生提供VVG保险套餐。要了解更多信息，请访问[ETH国际学生健康保险网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543)。如果你不确定，你可以联系[交流办公室](https://ethz.ch/de/studium/non-degree-angebote/austausch-und-gaststudium.html)（如果你是交流生）或[国际学生办公室](https://ethz.ch/de/studium/international.html)（如果你是本科生或硕士生）。
 
 ^
 
@@ -69,13 +69,9 @@
 
 ![](.topwrite/assets/image_1682196432216.png)
 
-^
-
 **各产品具体报价可在ETH相关网站查看**：
 
 <https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html>
-
-![](.topwrite/assets/image_1682196576306.png =419)
 
 ^
 
@@ -83,7 +79,15 @@
 
 > <https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html>
 
-**抵达瑞士后3个月内**，你需要购买VVG学生保险并申请豁免KVG保险。
+**抵达瑞士后3个月内**，你需要购买VVG学生保险**并**申请豁免KVG保险。
+
+^
+
+**具体豁免步骤**，请见[上述网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html)第2项：
+
+With a new Swiss Student Health Insurance without income
+
+![](.topwrite/assets/image_1682197206050.png =480)
 
 ^
 
@@ -101,23 +105,15 @@
 
 ^
 
-**具体豁免步骤**，请见[上述网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html)第2项：
-
-With a new Swiss Student Health Insurance without income
-
-![](.topwrite/assets/image_1682197206050.png =480)
-
-^
-
 > **我在3个月前申请豁免强制健康保险，但仍未收到决定。我必须做什么**？
-> 请等待。在处理豁免申请方面有很大的延迟——可能需要9个月的时间才会收到答复！请等待！如果你被居住地的市政府威胁要参加强制保险，请联系我们。
+> 请等待。在处理豁免申请方面有很大的延迟——可能需要9个月的时间才会收到答复！请等待！如果你被居住地的市政府威胁要参加强制KVG保险，请联系我们。
 >
 > **我必须在3个月内收到关于豁免强制保险的决定吗**？
 > 不，你只需要在入境后3个月内申请豁免。在大多数情况下，决定会晚一些。在这段时间内，你仍然有保险，而且还必须支付保险费（如果你已经购买了学生保险）。
 
 ^
 
-#### **4**. **免赔额与共付额**
+#### **4**. **保险免赔额与共付额**
 
 > <https://swisscare.com/zh/product/ruishiguojixueshengjiankangbaoxian>
 
@@ -138,7 +134,7 @@ With a new Swiss Student Health Insurance without income
 
 ^
 
-免赔额（自付额）越高，保险费越低。
+免赔额（自付）越高，保险费越低。
 
 ^
 
