--- a/30学联服务.md
+++ b/30学联服务.md
@@ -30,7 +30,7 @@
 
 ^
 
-#### **6. 学联专属Sunrise LEBARA折扣**
+#### **6. 学联专属Sunrise LEBARA手机卡折扣**
 
 ![](.topwrite/assets/image_1682192038118.png =245)![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 
@@ -38,7 +38,7 @@
 
 ^
 
-#### **7. 学联专属Swisscare折扣**
+#### **7. 学联专属Swisscare保险折扣**
 
 ![](.topwrite/assets/image_1682925725457.png =210)![](.topwrite/assets/image_1682200044731.png =271)
 
