--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,4 +1,4 @@
-> [success] 如你能提供或需要接机服务，请在学联论坛[2023接机供求贴](https://forum.acssz.org/d/950)发内发布。
+> [success] 如需要接机服务，请在学联论坛[2023接机供求贴](https://forum.acssz.org/d/950)内发布。
 
 #### **落地后需办理的所有事项**：
 
