--- a/24找房租房.md
+++ b/24找房租房.md
@@ -54,6 +54,9 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 7. 如果你提交了申请表，并且已经告诉你，Alex把申请表转给了他的同事来准备合同，那么这个申请就有约束力。如果你后来取消申请，我们将不接受你的进一步申请，或者向你收取50瑞士法郎的行政工作费用。
 
 :-: ![](.topwrite/assets/Intermezzo2023Fall.png =300)
+> 由于群已经达到200人的人数限制，可以加秘书处杨同学让他手动拉到租房群
+
+:-: ![](.topwrite/assets/yangcyself.png =200)
 
 ^
 
