--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -17,12 +17,10 @@
 * **学生JUWO**: <http://www.juwo.ch/> 没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
 * **学联论坛**上租房信息：<https://forum.acssz.org/>
 
-此外，你还可以通过**学联合作伙伴Intermezzo租房公司**云找房：
+此外，你还可以通过**学联合作伙伴Intermezzo租房公司**云找房，**请加Intermezzo2023Fall微信群**。由于该群已达200人，请加秘书处杨同学微信让他拉你进群：
 
-:-: ![](.topwrite/assets/Intermezzo2023Fall.png =360)
-> 由于群已经达到200人的人数限制，可以加秘书处杨同学让他手动拉到租房群
+:-: ![](.topwrite/assets/yangcyself.png =268)
 
-:-: ![](.topwrite/assets/yangcyself.png =200)
 ^
 
 除此外，以下网站可尝试云找房，但多数情况下是需要现场看房的：
