--- a/24找房租房.md
+++ b/24找房租房.md
@@ -31,7 +31,7 @@
 | WFSS                                     | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://www.wfss.ch/de/>                                                                                                                                                                                                                        |
 | 学校推荐网站                                   | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富&#xA;2\. 价格相对合理&#xA;3\. 相对可靠                                    | 1. 有时会有租房骗子&#xA;2\. 很多房东只会德语&#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>                                                                                                                                                                                               |
 | ST-JUSTIN                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里           | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://justinus.ch/en/?cn-reloaded=1>                                                                                                                                                                                                          |
-| 学联合作伙伴&#xA;INTERMEZZO                    | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | Alex小哥，请用英语或德语沟通，微信号：Alex\_Intermezzo                                                                                                                                                                                                            |
+| 学联合作伙伴&#xA;INTERMEZZO                    | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | 请见下文介绍                                                                                                                                                                                                                                           |
 | 微信群内转租                                   | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                    | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | &#xA;微信群（新生群、二手群、学联活动群等）&#xA;                                                                                                                                                                                                                    |
 | 学联论坛                                     | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                   | 中国人之间转租，沟通方便                                                           | 1. 价格波动范围大&#xA;2\. 需甄别真实性                            | <https://forum.acssz.org/>                                                                                                                                                                                                                       |
 
@@ -40,23 +40,22 @@
 **学联合作伙伴——INTERMEZZO租房公司**
 
 房型：2.5的studio到4.5的三人或四人合租flat及8人以上合租的独栋湖景别墅。
-房源：主要在苏黎世市区，靠近UZH,ETH,ZHAW等主校、Oerlikon、Irchel、ETH hongerberg附近。
+房源：主要在苏黎世市区，靠近UZH、ETH、ZHAW等主校，在Oerlikon、Irchel、ETH Hönggerberg附近。
 价格：650-1200瑞士法郎每月，押二付一，灵活终止合同，先住后付，不需提前支付任何费用。房费包含水电网暖费用，提供家具，厨房设备（洗碗机、烤箱、锅碗瓢盆），洗衣房。
 **申请流程**：确定需求；填写申请表；签署合同；入住对接；押租金。
-Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房间的*申请表格链接*都在 **评论** 部分。如果没有看到申请表，那是因为该房间目前已被预订/租出。
+Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房间的**申请表格链接**都在**评论**部分。如果没有看到申请表，那是因为该房间目前已被预订/租出。
 
 1. 如果你对其中的一个房间感兴趣，请在微信上添加Alex，并告知你的名字（拼音），然后把想租的房间的申请表发回；
 2. 请用德语或英语与Alex联系；
-3. 一般来说，如果Alex发布了一个房间，它立即可租。租房合同必须在提交申请后两周内开始执行。请不要要求从现在开始的两到三个月内的房间。他们不会提前那么久提供房间；
+3. 一般来说，如果Alex发布了一个房间，它立即可租。租房合同必须在提交申请后两周内开始执行。请不要要求2-3个月后起租的房间，他们不会提前那么久提供房间；
 4. 只出租limited（有固定租期）的公寓。没有unlimited（无限可续）的公寓！
 5. 一般来说，公寓配有一张床、一张床垫、一把椅子、一张桌子、一盏台灯和一个壁橱，除非另有说明；
 6. 租金价格包括所有的水电费、Wifi和家具费用；
-7. 如果你提交了申请表，并且已经告诉你，Alex把申请表转给了他的同事来准备合同，那么这个申请就有约束力。如果你后来取消申请，我们将不接受你的进一步申请，或者向你收取50瑞士法郎的行政工作费用。
+7. 如果你提交了申请表，并且Alex已经告诉你，他把申请表转给了他的同事来准备合同，那么这个申请就有约束力。如果你后来取消申请，Intermezzo将不接受你的进一步申请，或者向你收取50瑞士法郎的行政工作费用。
 
-:-: ![](.topwrite/assets/Intermezzo2023Fall.png =300)
-> 由于群已经达到200人的人数限制，可以加秘书处杨同学让他手动拉到租房群
+如你对此感兴趣，**请加Intermezzo2023Fall微信群**。由于该群已达200人，请加秘书处杨同学微信让他拉你进群：
 
-:-: ![](.topwrite/assets/yangcyself.png =200)
+:-: ![](.topwrite/assets/yangcyself.png =271)
 
 ^
 
