--- a/15新生材料c-o寄存.md
+++ b/15新生材料c-o寄存.md
@@ -7,7 +7,7 @@
 ^
 
 * 请找**靠谱**学姐学长，并且提前沟通好；
-* 当买好机票且确定落地日期后，应该及时和学姐学长说明情况，并**约定落地后领取材料的时间**。请确定学姐学长那时候在苏黎世，如果你落地后学姐学长刚好在旅游，那么你可能很长时间都领不到你的新生材料，导致居委会注册、找房等一系列后续手续的连锁延后；
+* 当买好机票且确定落地日期后，应该及时和学姐学长说明情况，并**约定落地后领取材料的时间**。请确定学姐学长那时候在苏黎世，如果你落地后学姐学长刚好在旅游，那么你可能很长时间都领不到你的新生材料，导致居委会注册等一系列后续事项的连锁延后；
 * 如果此时你想重新联系学校制作材料并邮寄到你的临时住址，那么过程耗费时间也是非常长的；
 
 ^
