--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -88,7 +88,7 @@
 
 ### **2. 赴瑞可能路线及其特点**
 
-（本章节综合当前航班执行情况、现有航班计划、当前放票情况、航司合作情况、行李直挂情况、行程总时长、航司“靠谱”程度等编写；所有票价信息均为4月23日通过官网、OTA平台等查询8月中下旬机票，结合本人经验获得，仅供参考）
+（本章节综合当前航班执行情况、现有航班计划、当前放票情况、航司合作情况、行李直挂情况、行程总时长、航司“靠谱”程度等编写；所有票价信息均为5月30日通过官网、OTA平台等查询8月中下旬机票，结合本人经验获得，仅供参考）
 
 #### **2.1 自中国内地直航赴瑞**
 
@@ -105,7 +105,7 @@
 目前，中国内地→瑞士直航航班包含：
 
 * LX189航班（上海浦东PVG-苏黎世ZRH），[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周三、五、日执行，起降时刻11:20-18:50，实际飞行时长约13小时，执飞机型为B77W/A343
-* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、六执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
+* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、六 **（7月14日起调整为每周一、四、五、六）** 执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
 
 目前，中国内地→瑞士的航线航班没有增加的计划。如有增班的信息，我们会第一时间通告。
 
@@ -116,13 +116,10 @@
 * 出境口岸选择多
 * 航班数量相对多
 * 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证，具体请参考[特区政府有关规定](https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html)。
-* 香港赤鱲角机场近日联合包含国泰航空CX在内的香港各主要航司举行抽奖活动，目前是第二轮，中奖者可获得免费机票，详见：
-  \-- 香港赤鱲角机场[《飞遇世界大赏》](https://wow.hongkongairport.com/lang/sc/tickets/)
-  \-- 国泰航空[《「飞遇世界大赏」机票礼遇 - 中国香港始发机票大抽奖》](https://flights.cathaypacific.com/sc_CN/offers/world-of-winners-outbound-hk.html)
-  后续活动信息请关注香港赤鱲角机场及国泰航空。
 
 缺点：
 
+* 国泰航空有较为普遍的歧视现象
 * 受地理因素影响，飞行时间较长
 * 单程票价格相对较高
 * 免费行李额度较中东航司少
@@ -158,25 +155,18 @@
 
 * 北京首都PEK/上海浦东PVG/成都天府TFU-法兰克福FRA-苏黎世ZRH
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[汉莎航空LH](https://www.lufthansa.com/cn/zh/homepage)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
-  单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG-慕尼黑MUC-苏黎世ZRH
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[汉莎航空LH](https://www.lufthansa.com/cn/zh/homepage)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
-  单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG-维也纳VIE-苏黎世ZRH
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[奥地利航空OS](https://www.austrian.com/lhg/cn/zh)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
-  单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG/广州白云CAN-巴黎戴高乐CDG-苏黎世ZRH
   承运航司：[中国南方航空CZ](https://www.csair.com/cn/)、[法国航空AF](https://wwws.airfrance.com.cn/)等
-  单程价格：约8-12k
 * 北京首都PEK/北京大兴PKX/上海浦东PVG/广州白云CAN/厦门高崎XMN-阿姆斯特丹史基浦AMS-苏黎世ZRH
   承运航司：[中国南方航空CZ](https://www.csair.com/cn/)、[中国东方航空MU](https://www.ceair.com/)、[厦门航空MF](https://www.xiamenair.com/zh-cn/)、[荷兰皇家航空KL](https://www.klm.com.cn/)等
-  单程价格：约8-12k
 * 上海浦东PVG/郑州新郑CGO-赫尔辛基万塔HEL-苏黎世ZRH
   承运航司：[吉祥航空HO](http://www.juneyaoair.com/)、[芬兰航空AY](https://www.finnair.com/cn-zh)等
-  单程价格：约6-8k
 * 北京首都PEK/上海浦东PVG-哥本哈根CPH-苏黎世ZRH
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[北欧航空SK](https://www.flysas.com/cn-zh/)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
-  单程价格：中国国际航空：约8-9k；北欧航空：约4-6k
 
 此外，还有达成波兰航空LO的航班经华沙肖邦WAW转机的选择可以考虑，但据反馈该航司在航班取消时操作退款速度极慢。
 
@@ -184,7 +174,7 @@
 
 优点：
 
-* 价格相对优惠（价格约4-7k）
+* 价格相对优惠
 * 免费行李额度较多（尤其是留学生票）
 * 中转地对中国内地护照免签，即使遇到诸如航班取消一类的问题也不至于滞留在中转区进出不得
 
