--- a/25居委会报到.md
+++ b/25居委会报到.md
@@ -8,7 +8,7 @@
 
 ^
 
-**抵达苏黎世后14天内，必须向住址所在地的居委会报到**（如14天内未租到房的，也需要前往暂住地址的居委会说明情况请求延期，避免成为“黑户”，具体请参见[“落地事项”部分](02落地事项.md)）。含此在内的所有业务都必须到住址所在地的居委会办理（苏黎世不允许跨区办理业务），关于自己的住址具体对应哪一个居委会，可：
+**抵达苏黎世后14天内，必须向住址所在地的居委会报到**（如14天内未租到房的，也需要前往暂住地址的居委会说明情况请求延期，避免成为“黑户”）。含此在内的所有业务都必须到住址所在地的居委会办理（苏黎世不允许跨区办理业务），关于自己的住址具体对应哪一个居委会，可：
 
 * 直接询问房东/同住租客（推荐）
 * 如居住在市区，可通过市政提供的[查询系统](https://www.stadt-zuerich.ch/prd/en/index/bevoelkerungsamt/Contact_Information_and_Opening_Hours/district_office_kreisbuero.html)查询自己的住址所对应的Kreisbüro（不要想当然地直接去最近的Kreisbüro，笔者租的第一个房子刚好处在两个区划的边界上面，结果对应的Kreisbüro反而就是大老远的一个）：
