--- a/24找房租房.md
+++ b/24找房租房.md
@@ -101,7 +101,11 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 #### **5**. **什么是注册地址**
 
 1. 只要能签租房合同，无论是Mietvertrag oder Untermietvertrag（原始合同或转租合同），都是可以注册的。请注意如果你是租的转租，需要把转租合同和二房东手里的原始合同一起带去Kreisbüro，且最好二房东一起陪同前往Kreisbüro报到
-2. 不能注册地址的租房，就是不给你合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上，按惯例是需要签订租房合同的，有合同就可以去Kreisbüro报到**
+2. 不能注册地址的租房，就是不给你合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去Kreisbüro报到**
 3. 所谓收注册地址/出注册地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去报到。学联非常不推荐买卖注册地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和Kreisbüro的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
 
+> 转租合同模板（由[瑞士租房者协会](https://www.mieterverband.ch/)提供）:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]{src=".topwrite/assets/2019_Untermietvertrag-Wohnraeume_mp_interaktiv.pdf" size="154.85 kB"}
+
+^
+^
 ^
