Update .topwrite/assets/image_1685710948287.png, 24找房租房.md, 25居委会报到.md

--- a/25居委会报到.md
+++ b/25居委会报到.md
@@ -19,14 +19,36 @@
 * 如居住在郊区的，可直接通过地址全名看出（如住址为 XX Strasse XX, 8058 Kloten则代表该地址在Kloten地区，需要到Kloten的Einwohnerkontrolle办理报到
   各区的Einwohnerkontrolle的地址、联系方式等请参见：[Ab- und Anmelden bei der Wohngemeinde– online oder persönlich](https://www.ch.ch/de/wohnen/umzug/ab-und-anmelden-bei-der-wohngemeinde/#bei-der-neuen-gemeinde-anmelden)（需要手动填入地区名称方可查到对应的Einwohnerkontrolle信息；亦可直接通过Google查询）
 
+> [danger] **以上信息在2023年6月12日后可能不再适用**！
+>
+> **请大家关注如下重要变动**：
+>
+> ^
+>
+> 今年6月12日起，苏黎世各Kreisbüro将集中合并为3个，且办事地点不再和居住地点绑定，意味着你可以选择任意一处办事。具体信息请见[苏黎世政府媒体发布](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)
+>
+> ^
+>
+> 鉴于此，今年的居委会报到注册将和往年很不一样，我们目前依然缺乏相关经验和信息，所以请大家参考ETH官网上目前依然比较有限的信息：[ETH官网相关信息](https://ethz.ch/de/studium/international/nach-ankunft/aufenthaltsbewilligung.html#par_textimage_48578403)
+>
+> ^
+>
+> 学联会实时跟进信息，并及时修改2023新生文档，感谢大家的理解！
+>
+> ^
+>
+> 同时也欢迎大家到时在群内分享经验见闻，我们会及时关注，并补充形成新的篇章内容。
+
 ^
 
 #### **2. 材料准备**
 
 原则上，报到不要求提前预约。但是，如你居住在1/2/7/8区，我们强烈建议你[提前预约](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/terminvereinbarung.html)以缩短等待时间，居住在其他地区的也可以按需进行预约，有提前预约的人员在居委会会有专门窗口。
-报到时，请准备好你的护照、租房合同、入学注册证明，同时带足200瑞郎用于缴纳注册费，具体费用视具体情况会有所不同。
+报到时，请准备好你的**护照、租房合同、学期注册证明，同时带足200瑞郎**用于缴费（40瑞Meldebestätigung和142瑞Ausweisgebühr制证费，以及其它可能费用）。
 
-![](.topwrite/assets/image.png)
+![](.topwrite/assets/image_1685710948287.png =507)
+
+截图来源：[ETH官网介绍页面](https://ethz.ch/de/studium/international/nach-ankunft/aufenthaltsbewilligung.html)
 
 ^
 
