--- a/24找房租房.md
+++ b/24找房租房.md
@@ -82,7 +82,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 #### **4**. **租房注意事项**
 
-1. 所租房子是否可注册地址
+1. 所租房子是否能签署租房合同（有合同才能去居委会报到）
 2. 尽量租在110区
 3. 确认房费是否包含水电网暖气电视等费用，是否含有家具，是否需要承接家具。如果不包含家具，可在IKEA添置，或在群里收二手，或在家附近捡一些居民不用的家具。不要被没有家具劝退，自己在宜家置办家具也是不错的选择，详情可自行参考ikea网站https\://www\.ikea.com/ch/en/
 4. 押金一般需要交到专用押金账户，若是私人账户，需谨慎
@@ -100,9 +100,10 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 #### **5**. **什么是注册地址**
 
-1. 只要能签租房合同，无论是Mietvertrag oder Untermietvertrag（原始合同或转租合同），都是可以注册的。请注意如果你是租的转租，需要把转租合同和二房东手里的原始合同一起带去Kreisbüro，且最好二房东一起陪同前往Kreisbüro报到
-2. 不能注册地址的租房，就是不给你合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去Kreisbüro报到**
-3. 所谓收注册地址/出注册地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去报到。学联非常不推荐买卖注册地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和Kreisbüro的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
+1. 总的来说，“注册地址”一词是很久以前由坊间发明创造出来的词汇，其并不对应任何官方条文概念。官方要求请见“[25 居委会报到](25居委会报到.md)”篇。
+2. 只要能签租房合同，无论是Mietvertrag oder Untermietvertrag（原始合同或转租合同），都是可以的。请注意如果你是租的转租，需要把转租合同和二房东手里的原始合同一起带去Kreisbüro，且最好二房东一起陪同前往Kreisbüro报到
+3. 不能注册地址的租房，就是不给你合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去Kreisbüro报到**
+4. 所谓收注册地址/出注册地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去报到。学联非常不推荐买卖注册地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和Kreisbüro的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
 
 > 转租合同模板（由[瑞士租房者协会](https://www.mieterverband.ch/)提供）:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]{src=".topwrite/assets/2019_Untermietvertrag-Wohnraeume_mp_interaktiv.pdf" size="154.85 kB"}
 
