Update .topwrite/assets/image_1685999282078.png, 25居委会报到.md, SUMMARY.md

--- a/25居委会报到.md
+++ b/25居委会报到.md
@@ -1,64 +1,95 @@
-#### **1. 查询所属居委会**
+#### **1. 苏黎世的住址申报体系介绍**
+**（本章节内容2023年6月12日起适用）**
+*本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，将非地名的翻译列表如下：*
+| 本文使用的中文译名 | 对应的德语单词 | 对应的英语单词<br/>（如有） |
+| --- | --- | --- |
+| 苏黎世州 | Kanton Zürich | |
+| 苏黎世市 / 苏黎世市区 | Stadt Zürich |  |
+| 居委会（6月12日起撤销） | Kreisbüro |  |
+| 人口登记处 | Personenmeldeamt |  |
+| 住址申报 | anmelden | register |
+| 住址变更 | Addresseänderung | change of residential address |
+| 住址注销 | abmelden | de-register |
+| 居留卡 | Aufenthaltsbewilligung | residence permit |
 
-本章节所称“居委会”，在苏黎世市区（下图中彩色部分）叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区（下图中白色部分）叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会”。
+*地名的翻译在正文中以括号形式列明。*
+*此外，本章节所称的“苏黎世郊区”特指属于苏黎世州但不属于苏黎世市的地区，详见下图：*
+![](.topwrite/assets/image_1685999282078.png)
+*其中，彩色部分是苏黎世市，灰色部分即为苏黎世郊区。*
 
+> [danger] **背景介绍**
+> 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记处（详见：[苏黎世市政府发布的相关消息](<https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html>)），分别为：
+> - 南城人口登记处（Personenmeldeamt Zürich Süd）
+> -- 地址：Stadthausquai 17, 8001 Zürich（市政厅）
+> -- 电话：*待添加*
+> - 北城人口登记处（Personenmeldeamt Zürich Nord）
+> -- 地址：Hofwiesenstrasse 370, 8050 Zürich（Oerlikon火车站）
+> -- 电话：*待添加*
+> - 西城人口登记处（Personenmeldeamt Zürich West）
+> -- 地址：Hohlstrasse 35, 8004 Zürich（Helvetiaplatz）
+> -- 电话：*待添加*
+> 
+> 本章节已按此更新。
+> 苏黎世郊区的人口登记处不受本次重组影响。
+> 
+**苏黎世州有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报。**
+***（14天内未找到可供申报的住所的，也必须前往南城人口登记处说明情况请求延期，避免成为“黑户”）***
+**具体如下：**
+**1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的）：*****（所有从国内首次前来苏黎世留学的同学均属此类）***
+- 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭[预约](<https://www.etermin.net/personenmeldeamtsued>)前往南城人口登记处**进行住址申报
+- 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报
+
+**2. 对于从瑞士其他地区迁入苏黎世州的人员：**
+- 迁入苏黎世前，须确保已在原居住地注销
+- 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内前往市区任一人口登记处进行住址申报
+- 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报
 ^
 
-![](.topwrite/assets/image_1682633334979.png =503)
+#### **2. 办理首次住址申报所需材料**
+根据[苏黎世市政府相关要求](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/zuzug.html>)，参考[ETH的相关介绍](<https://ethz.ch/de/studium/international/nach-ankunft/aufenthaltsbewilligung.html>)，从瑞士以外的国家迁入苏黎世州的人员在首次办理住址申报时须准备以下材料：
+- 护照原件
+- 租房合同原件
+- 学期注册确认（*Erweiterte Immatrikulationsbestätigung*）
 
-^
-
-**抵达苏黎世后14天内，必须向住址所在地的居委会报到**（如14天内未租到房的，也需要前往暂住地址的居委会说明情况请求延期，避免成为“黑户”）。含此在内的所有业务都必须到住址所在地的居委会办理（苏黎世不允许跨区办理业务），关于自己的住址具体对应哪一个居委会，可：
-
-* 直接询问房东/同住租客（推荐）
-* 如居住在市区，可通过市政提供的[查询系统](https://www.stadt-zuerich.ch/prd/en/index/bevoelkerungsamt/Contact_Information_and_Opening_Hours/district_office_kreisbuero.html)查询自己的住址所对应的Kreisbüro（不要想当然地直接去最近的Kreisbüro，笔者租的第一个房子刚好处在两个区划的边界上面，结果对应的Kreisbüro反而就是大老远的一个）：
-  下拉到搜索（Suche）
-  ![](.topwrite/assets/image_1680724342187.png)
-  输入住址，即可找到对应的Kreisbüro。
-  各个Kreisbüro的地址、联系方式等请参见查询系统（链接见上文）。
-* 如居住在郊区的，可直接通过地址全名看出（如住址为 XX Strasse XX, 8058 Kloten则代表该地址在Kloten地区，需要到Kloten的Einwohnerkontrolle办理报到
-  各区的Einwohnerkontrolle的地址、联系方式等请参见：[Ab- und Anmelden bei der Wohngemeinde– online oder persönlich](https://www.ch.ch/de/wohnen/umzug/ab-und-anmelden-bei-der-wohngemeinde/#bei-der-neuen-gemeinde-anmelden)（需要手动填入地区名称方可查到对应的Einwohnerkontrolle信息；亦可直接通过Google查询）
-
-> [danger] **以上信息在2023年6月12日后可能不再适用**！
->
-> **请大家关注如下重要变动**：
->
-> ^
->
-> 今年6月12日起，苏黎世各Kreisbüro将集中合并为3个，且办事地点不再和居住地点绑定，意味着你可以选择任意一处办事。具体信息请见[苏黎世政府媒体发布](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)
->
-> ^
->
-> 鉴于此，今年的居委会报到注册将和往年很不一样，我们目前依然缺乏相关经验和信息，所以请大家参考ETH官网上目前依然比较有限的信息：[ETH官网相关信息](https://ethz.ch/de/studium/international/nach-ankunft/aufenthaltsbewilligung.html#par_textimage_48578403)
->
-> ^
->
-> 学联会实时跟进信息，并及时修改2023新生文档，感谢大家的理解！
->
-> ^
->
-> 同时也欢迎大家到时在群内分享经验见闻，我们会及时关注，并补充形成新的篇章内容。
-
-^
-
-#### **2. 材料准备**
-
-原则上，报到不要求提前预约。但是，如你居住在1/2/7/8区，我们强烈建议你[提前预约](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/terminvereinbarung.html)以缩短等待时间，居住在其他地区的也可以按需进行预约，有提前预约的人员在居委会会有专门窗口。
-报到时，请准备好你的**护照、租房合同、学期注册证明，同时带足200瑞郎**用于缴费（40瑞Meldebestätigung和142瑞Ausweisgebühr制证费，以及其它可能费用）。
-
+同时，还需**带足200瑞郎**用于缴费（申报费用：40瑞郎；制证费用：142瑞郎；以及其它可能费用；现金/刷卡均可）。
 ![](.topwrite/assets/image_1685710948287.png =507)
 
-截图来源：[ETH官网介绍页面](https://ethz.ch/de/studium/international/nach-ankunft/aufenthaltsbewilligung.html)
+^
+
+#### **3**. **预约办理居留卡**
+
+新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留卡，此项会在人口登记处的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留卡（见[28 居留卡办理](<28移民局录指纹.md>)）。
+**关于时间选择：** 根据自身情况选择一个大致合适的时间即可，后期即使计划有变，亦可通过预约单上提供的网站更改时间。
 
 ^
 
-#### **3**. **预约录指纹**
+#### **4**. **申报确认函（*Meldebestätigung*）**
 
-完成基本的注册流程之后，居委会的工作人员会帮助你选择预约时间到移民局录指纹（以及申请正式的居留卡）。大概选一个合适的时间即可，就算之后临时有变故也可以在预约单提供的网站上更改时间。
+新迁入苏黎世的人员在完成住址申报后会获得一张”申报确认函“（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效。
+凭该确认函即可前往银行办理瑞士本地的银行卡（见[26 瑞士银行卡](<26瑞士银行卡.md>)）。
+虽然相比于正式的居留证，这张证明使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留卡）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张申报确认函（上的参考号）（具体根据所选报备方式有所不同）。
 
 ^
+#### **4**. **住址变更申报**
+*（本章节后期将复制/移动至[03 生活相关](<03生活相关.md>)部分）*
+当住址发生变更时，同样需要进行申报。
+**情况一：苏黎世市区→苏黎世市区**
+须在搬迁完成前14天至搬迁完成后14天期间
+- 前往市区任一人口登记处（该项业务为**全市通办**），凭护照、居留证（如有）、原有的申报确认函、新的租房合同以及足量资金
+- 或在线通过[E-Umzug平台](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html>)
 
-#### **4**. **临时居留证(Meldebestätigung**)
+办理住址变更申报。
 
-在居委会报到后，工作人员会给你一张临时居留证（一张含有你个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}）。相比于正式的居留卡，这张证明使用频率相对较低。但也**请妥善保管**（就算获得正式居留卡之后也请妥善保管，偶尔会用得上），因为这会你就可以用它办理瑞士本地的银行卡了，包括一张储蓄卡以及一张Prepaid（即额度为0的信用卡，需要提前充值才能使用）/Credit卡。
-此外未来如果需要[搬家（办理地址变更）](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)，在向政府报备时也需要用到这张临时居留证（上的参考号）（具体根据所选的报备方式有所不同）。
+**情况二：苏黎世市区→苏黎世郊区**
+*待编写*
+**情况三：苏黎世郊区→苏黎世市区**
+*待编写*
+**情况四：苏黎世郊区→苏黎世郊区（相同区县）**
+*待编写*
+**情况五：苏黎世郊区→苏黎世郊区（不同区县）**
+*待编写*
+
+^
+#### **4**. **住址注销**
+*（本章节后期将复制/移动至[03 生活相关](<03生活相关.md>)部分）*
+*待编写*
