--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -114,9 +114,11 @@
 ^
 #### **7**. **住址注销**
 *（本章节后期将复制/移动至[03 生活相关](<03生活相关.md>)部分；届时本部分名称亦应进行对应修改）*
-根据瑞士相关法律法规，居民离开现居住市县（前往其他市县居住）的，或居民长期（3个月以上）离开瑞士的，均须办理住址注销。
+根据瑞士相关法律法规，居民离开现居住市县（前往其他市县居住）的，或居民不再居住在瑞士的（如完成学业归国），均须办理住址注销。
 - **对于前者（离开现居住市县，前往其他市县居住的）：**
 须在离开现居住市县后14天内前往现居住地对应的人口登记处，凭护照、居留证、原有的申报确认函办理注销。如现居住地所在市县和新居住地所在市县均支持[E-Umzug](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html>)的，也可在线办理。
 - **对于后者（离开瑞士的）：**
 *（有待核实：该项业务在市区是否实现通办）*
 须在离开瑞士前30天内前往现居住地对应的人口登记处，凭护照、居留证、原有的申报确认函办理注销，同时还需要缴纳20瑞郎的注销费用。
+
+此外，短期离开瑞士的，如离开时长短于3个月的，无须进行任何操作；离开时长介于3个月至6个月之间的，原则上需要进行在线申报离境情况。离开时长超过6个月的，原则上需要前往居住地的人口登记处申报离境情况。关于苏黎世市的短期离境申报可参考：[Stadt Zürich Temporäre Landesabwesenheit](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html>)
