--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -48,6 +48,10 @@
 - 迁入苏黎世前，须确保已在原居住地注销
 - 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内前往市区任一人口登记处进行住址申报
 - 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报
+
+如不明确自己所住的地点是属于市区还是郊区的，可
+- 直接询问房东或室友，或
+- 通过地址判定：如地址邮编为“Zürich”字样则代表该地址在市区，如为其他字样（如”Kloten“”Winterthur“等）则代表该地址在郊区。
 ^
 ^
 #### **2. 办理首次住址申报所需材料**
