--- a/28居留证的办理.md
+++ b/28居留证的办理.md
@@ -1,7 +1,7 @@
 #### **1.  居留证的首次办理**
-在人口登记处完成首次住址申报后，需要按预约时间（参见[25 住址的申报与注销](<25住址的申报与注销.md>)）前往苏黎世移民局（地址：[Berninastrasse 45, 8090 Zürich](https://goo.gl/maps/CDzxUoomjsara83c7)）办理居留卡（DE: Aufenthaltsbewilligung; EN: Residence Permit），才算正式成为苏黎世的居民。
+在人口登记处完成首次住址申报后，需要按预约时间（参见[25 住址的申报与注销](<25住址的申报与注销.md>)）前往苏黎世移民局（地址：[Berninastrasse 45, 8090 Zürich](https://goo.gl/maps/CDzxUoomjsara83c7)）办理居留证（DE: Aufenthaltsbewilligung; EN: Residence Permit），才算正式成为苏黎世的居民。
 ^
-**前往移民局办理居留卡时，需要携带**：
+**前往移民局办理居留证时，需要携带**：
 ***（如本部分内容与预约单上要求有出入的，以后者为准。）***
 - 办理住址申报时获得的预约单
 - 护照
@@ -13,22 +13,24 @@
 
 首次办理居留证时，需要进行指纹录入并拍摄照片（作为证件上的头像照片使用），全程按工作人员指导完成即可。
 ^
-在办理完成一段时间后（视申请人数以及移民局雇员的工作效率，时间从几周到一两个月都有可能），居留卡将以挂号信形式寄出。
+在办理完成一段时间后（视申请人数以及移民局雇员的工作效率，时间从几周到一两个月都有可能），居留证将以挂号信形式寄出。
 **注意，须确保邮箱上有本人姓名才能收到信件！**
 ^
-一般，在瑞留学生（包含本科、硕士、博士）获得的居留卡是B类，其样卡见下：
+一般，在瑞留学生（包含本科、硕士、博士）获得的居留证是B类，其样证见下：
 ![](.topwrite/assets/image_1682631028316.png)
 ![](.topwrite/assets/image_1682631039883.png)
-其中，居留卡背面包含有“ZEMIS Nr.”和“Kant. Referenz”，这两个号码在办理诸多业务时（如：通过Kontakt Formular或电话联系移民局，见后文）都需要提供。
+其中，居留证背面包含有“ZEMIS Nr.”和“Kant. Referenz”，这两个号码在办理诸多业务时（如：通过Kontakt Formular或电话联系移民局，见后文）都需要提供。
 ^
 ^
 #### **2.  居留证的延期**
 *（本章节后期将复制/移动至[03 生活相关](<03生活相关.md>)部分）*
 参考：[Verlängerung des Aufenthalts B](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/internationale-kundschaft/verlaengerung_des_aufenthals_b.html)、[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](<https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>)、[ETH: Visa and Residence Permit](<https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf>)
-一般地，在瑞留学生获得的居留卡有效期为1年。居留证到期前一个月左右时，人口登记处会向你寄送一封“延期信函”（Verfallsanzeige B，此处B对应居留证类型），要求你办理延期。如希望提前办理的，亦可前往人口登记处要求工作人员现场签发“延期信函”。
+一般地，在瑞留学生获得的居留证有效期为1年。居留证到期前一个月左右时，人口登记处会向你寄送一封“延期信函”（Verfallsanzeige B，此处B对应居留证类型），要求你办理延期。如希望提前办理的，亦可前往人口登记处要求工作人员现场签发“延期信函”。
 “延期信函”附有一张需要填写的表格，可以自行填写，亦可以在办理时在工作人员的指导下填写。收到“延期信函”后，须携带信函中要求的材料（一般为：护照、现有居留证、现有的学期注册确认、信函及其附件；以实际收到的“延期信函”为准）到对应的人口登记处办理（无须预约），同时需准备102瑞郎作为办理费用。居住地在市区的，可前往市区任一人口登记处办理（详见[25 住址的申报与注销](<25住址的申报与注销.md>)）。
 ^
 在人口登记处办理延期后，移民局会核查办理人的延期资格，为此其可能会向办理人致信，要求其**额外提供材料**。此时，须按照信中要求，在规定时间前递交相应材料。递交方式参见本文“联系移民局/补交材料”部分。例如，根据相关要求，办理延期人员须提供办理期间开具的**最新存款证明**（或不适用于博士），以确保其银行账户内余额此时不低于21000瑞郎（即：**不允许使用先前办理签证时使用的存款证明来办理延期！）**。由于人口登记处并不要求此项，这份存款证明几乎一定会是移民局要求补交的材料（之一）。鉴于移民局对这份材料的需求是可以预测的，我们建议**在人口登记处办理延期后便着手准备并递交这份存款证明**以节约时间。如规定时间前因故无法在规定时间前提供全部或部分材料的，也**必须**向移民局回信说明（参见本文“联系移民局/补交材料”部分），并注明预期的上交时间。
+^
+一般，在人口登记处办理后6-8周即可通过挂号信形式收到新的居留证。如恰逢办理高峰的，时间可能会有延长。**注意，须确保邮箱上有本人姓名才能收到信件！**
 ^
 此外，在原有居留证过期以后，获得新的居留证以前因故需要离开瑞士的（含回国等），或居留证在离开瑞士后返回瑞士前到期的，须前往移民局**办理返程签证（Return Visa）**。该签证为**随到随办，无需预约**。建议在办理返程签证前致电移民局以确保符合办理条件。
 
