--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -1,6 +1,6 @@
 :-: [![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =390)](https://acssz.org/about/intro/)
 
-#### :-: **2023苏黎世新生文档**
+#### :-: **苏黎世新生文档2023**
 
 ^
 
