--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -138,6 +138,10 @@ With a new Swiss Student Health Insurance without income
 
 ^
 
+> 关于共付额的官方法规条款：<https://www.bag.admin.ch/bag/en/home/versicherungen/krankenversicherung/krankenversicherung-versicherte-mit-wohnsitz-in-der-schweiz/praemien-kostenbeteiligung/kostenbeteiligung.html>
+
+^
+
 #### **5**. **学联专属Swisscare折扣及福利**！
 
 > <https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou>
