--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -128,9 +128,11 @@ With a new Swiss Student Health Insurance without income
 
 当该日历年的累积报销金额超出免赔额后，保险公司将负担超出部分的费用，但该部分费用**依然需要我们支付10**%，每个日历年**上限为700瑞士法郎**。我们共付**超过700瑞郎后**，剩余费用将**完全**由保险公司支付。
 
+注：**共付额**从每年1月1日起从0开始，持续累积一年。第二年将重新从0开始累积。
+
 ^
 
-每个日历年，医疗报销费用将首先计入免赔额（全自付）；累积超出免赔额后，将进入共付额（10%）阶段（保险公司报销90%）。受保人共付额支出达到700瑞郎后，之后的医疗费用将由保险公司全报销。
+每个日历年，医疗报销费用将首先计入免赔额（全自付）；累积超出免赔额后，将进入共付额（10%）阶段（保险公司报销90%）。受保人共付额支出累积达到700瑞郎后，之后的医疗费用才会由保险公司全报销。
 
 ^
 
