--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -132,7 +132,7 @@ With a new Swiss Student Health Insurance without income
 
 ^
 
-每个日历年，医疗报销费用将首先计入免赔额（全自付）；累积超出免赔额后，将进入共付额（10%）阶段（保险公司报销90%）。受保人共付额支出累积达到700瑞郎后，之后的医疗费用才会由保险公司全报销。
+每个日历年，医疗报销费用将首先计入免赔额（全自付）。累积超出免赔额后，将进入共付额（10%）阶段（保险公司报销90%）。受保人共付额支出累积达到700瑞郎后，之后的医疗费用才会由保险公司全报销。
 
 ^
 
