--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -1,21 +1,78 @@
-在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
+> [success] 本篇贡献：任逍遥，杨晨宇，杨锦涛，张家萌（新生），陈庆瑄（新生），彭雅莹（新生），岳妮（新生）
+
+在找房之前，请查看租房避雷贴：[租房避雷贴- 苏黎世留学生论坛](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)
+
+本章节仅介绍在国内可线上找房的相关信息，关于租房的具体介绍请参考中篇的“找房租房”篇。
 
 ^
 
-**以下网站可以在线云找房**：
+#### **1. 租房交易提醒**：&#x20;
 
-* **Student Village**: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）
-* **Living Sceinece**: <https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0> 有基本家具，拎包入住（仅限ETH学生）
+* 经典骗钱套路是说你还没来瑞士，之后如果你反悔不租的话他不划算，请你转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！
+* 瑞士正规租房流程是押金账户（会有一个专门开设在你名下的银行账户来存放你交的押金，而不是放在房东或房产公司的账户里）+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。
+* Debit储蓄卡可以正式汇款/转账（Zahlung），但Prepaid卡不行。请避免将大量金额一次性充入Prepaid卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易。
 
-> 一般不太可能通过SV和LS官网找到房，而是通过Facebook群组和微信群
+和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款给房东”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
+
+^
+
+#### **2. “云”找房渠道汇总**
+
+> [info] &#x20;[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)
+
+ETH\&UZH联办租房平台的回复速度和申请成功率较高，具体如何操作请见**以下步骤**：
+
+1. 点击打开[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)，在该网站注册，在注册时的“I am”选择”Incoming student“。提交后大概一天后会收到注册成功邮件；
+2. 注册成功后登录。在”Advert No“选择show all adverts，寻找房源信息；
+3. 点进housing office与woko合作的房源；
+4. 如何在[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)识别woko房源：550-770 CHF/月（近期价格有上调）；Type: shared apartment；Available from: 秋季学期的9月1日（春季待补充）；点进去Email为housing\@ethz.ch；
+5. 在description看清楚是ETH的房源还是UZH的房源，比如’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“是只有UZH学生才能申请的房子；
+6. 给housing\@ethz.ch发邮件：需写清房子的编号，表明自己的身份，最好在邮件中写自己的生日并附件学校的录取通知书，省下被追问的时间。Housing office回复十分迅速，如果有房源一般在半天内就会发来带有link的邮件，填完link后要及时回复邮件”I registered“，半小时左右后会收到房子的offer；
+7. 可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱推送，看到心仪的，即刻申请。
+
+**备注**：
+
+1. UZH房源较少，上架后最多2天左右就会抢完，晚申请可能会进入wating list。可提前与housing office联系，询问什么时候上新房源，并在上架时间不停刷新网页；
+2. 点击No一栏可以让编号按时间排序，直接在最后几行看到新上的房源；
+3. 年龄超过28岁的也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比广告价格贵100-200CHF；
+4. 如果有工作时间发邮件没有在3个小时内收到housing office回信，或填完link并回复邮件后超过一个小时没收到offer，建议检查垃圾邮件。如果垃圾邮件也没有，说明邮件太多你的消息可能被遗漏，可酌情再发邮件追问；
+5. 根据大家的分享，ETH的给的都是半年，UZH大部分给的都是一年。理论上不可以转租；
+6. 每个人有且只有一次向housing office申请宿舍的机会（属于是开盲盒）。Housing office会随机分发有空的房子，有可能不是你希望申请的那一套。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
+7. 秋季入学的学生，建议4、5月即可开始找房，7、8、9月逐渐进入找房高峰。如在来前能找到心仪长租房，皆大欢喜。否则建议退而求其次采用备选方案，暂且放弃价格，舒适度，地段，便利程度等某个要求，先找个房住下注册好，至少有个落脚点，之后在漫漫求学过程中再换房。长期观望，可能导致最后扑空，因而不得不连续住几个月酒店，其性价比往往更低。以上建议仅供参考。
+
+**致谢**：
+
+谢谢家萌（新生）、庆瑄（新生）、雅莹（新生）、岳妮（新生）提供以上关于在ETH\&UZH联办平台找房的极具价值和帮助作用的信息！
+
+前人栽树，后人乘凉。如你有重要信息想补充进《新生文档》，请联系邮箱info\@acssz.org，谢谢你的热心帮助！
+
+^
+
+> [info] [Student Village](https://studentvillage.ch/)：有基本家具，拎包入住（仅限ETH学生）
 >
-> Facebook群组链接<https://www.facebook.com/groups/934381236673846>
->
-> 微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入
+> [Living Sceinece](https://www.livingscience.ch/wohnen-studieren-zuerich/?id=\&L=1)：有基本家具，拎包入住（仅限ETH学生）
 
-* **学生WOKO**：<http://www.woko.ch/> 有基本家具，拎包入住。年龄限制，28或以下。若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
-* **学生JUWO**: <http://www.juwo.ch/> 没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
-* **学联论坛**上租房信息：<https://forum.acssz.org/>
+一般不太可能通过SV和LS官网找到房，而是通过Facebook群组和微信群。
+
+Facebook群组链接：<https://www.facebook.com/groups/svzurich/>
+
+微信群名为“SV的宝宝们”，长期500人满员，可以联系在群中的朋友在有空位时将你拉入
+
+^
+
+> [info] [wfs - wohnräume für studierende](https://www.wfss.ch/)
+>
+> [学生WOKO](https://www.woko.ch/)：有基本家具，拎包入住。年龄限制28或以下。若博士在28岁前入住，之后可以续住。博士年收入超过26400CHF的，每月要多交100CHF
+>
+> [学生JUWO](https://www.juwo.ch/)：没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
+>
+> [学联论坛](https://forum.acssz.org/)
+>
+> 学生微信群聊（新生群、学联活动群、二手群、租房群等）
+
+^
+
+> [info] 学联伙伴Intermezzo租房公司
 
 此外，你还可以通过**学联合作伙伴Intermezzo租房公司**云找房，**请加Intermezzo2023Fall微信群**。由于该群已达200人，请加秘书处杨同学微信让他拉你进群：
 
@@ -25,32 +82,17 @@
 
 除此外，以下网站可尝试云找房，但多数情况下是需要现场看房的：
 
-* 其它找房网站：
-
-> <https://www.wfss.ch/>
->
-> <https://www.wgzimmer.ch/home.html>
+> [WG Zimmer ](https://www.wgzimmer.ch/home.html)
 >
 > （WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
-> <https://flatfox.ch/c/en/>
+> [Flatfox](https://flatfox.ch/c/en/)
+> [comparis](https://en.comparis.ch/immobilien/search)
+> [RON ORP](http://www.ronorp.net/zuerich/dach-ueber-dem-kopf)
 >
-> <http://www.students.ch/wohnen/list> 
-> <https://wohnen.ethz.ch/index.php?act=searchoffer>
-> <https://en.comparis.ch/immobilien/search>
-> <http://www.ronorp.net/zuerich/dach-ueber-dem-kopf>
+> [Homegate](https://www.homegate.ch/en)
 >
-> <https://www.homegate.ch/en>
+> [Students](http://www.students.ch/wohnen/list)
 >
-> <https://www.wg-gesucht.de/>
-
-^
-
-**租房交易提醒**：&#x20;
-
-经典骗钱套路是说你还没来瑞士，之后如果您反悔不租的话他不划算，请你转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！
-
-* 瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。
-* debit储蓄卡可以正式汇款/转账（Zahlung），但Prepaid卡不行。请避免将大量金额一次性充入Prepaid卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易；
-* 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
+> [WG-Gesucht](https://www.wg-gesucht.de/)
 
 ^
