--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -23,26 +23,26 @@
 ETH\&UZH联办租房平台的回复速度和申请成功率较高，具体如何操作请见**以下步骤**：
 
 1. 点击打开[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)，在该网站注册，在注册时的“I am”选择”Incoming student“。提交后大概一天后会收到注册成功邮件；
-2. 注册成功后登录。在”Advert No“选择show all adverts，寻找房源信息；
-3. 点进housing office与woko合作的房源；
+2. 注册成功后登录，在”Advert No“选择show all adverts，寻找房源信息；
+3. 点进Housing Office与woko合作的房源；
 4. 如何在[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)识别woko房源：550-770 CHF/月（近期价格有上调）；Type: shared apartment；Available from: 秋季学期的9月1日（春季待补充）；点进去Email为housing\@ethz.ch；
 5. 在description看清楚是ETH的房源还是UZH的房源，比如’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“是只有UZH学生才能申请的房子；
-6. 给housing\@ethz.ch发邮件：需写清房子的编号，表明自己的身份，最好在邮件中写自己的生日并附件学校的录取通知书，省下被追问的时间。Housing office回复十分迅速，如果有房源一般在半天内就会发来带有link的邮件，填完link后要及时回复邮件”I registered“，半小时左右后会收到房子的offer；
-7. 可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱推送，看到心仪的，即刻申请。
+6. 给housing\@ethz.ch发邮件：需写清房子的编号，表明自己的身份，最好在邮件中写自己的生日并附件学校的录取通知书，省下被追问的时间。Housing Office回复十分迅速，如果有房源一般在半天内就会发来带有link的邮件，填完link后要及时回复邮件”I registered“，半小时左右后会收到房子的offer；
+7. 可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
 
 **备注**：
 
-1. UZH房源较少，上架后最多2天左右就会抢完，晚申请可能会进入wating list。可提前与housing office联系，询问什么时候上新房源，并在上架时间不停刷新网页；
-2. 点击No一栏可以让编号按时间排序，直接在最后几行看到新上的房源；
-3. 年龄超过28岁的也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比广告价格贵100-200CHF；
-4. 如果有工作时间发邮件没有在3个小时内收到housing office回信，或填完link并回复邮件后超过一个小时没收到offer，建议检查垃圾邮件。如果垃圾邮件也没有，说明邮件太多你的消息可能被遗漏，可酌情再发邮件追问；
-5. 根据大家的分享，ETH的给的都是半年，UZH大部分给的都是一年。理论上不可以转租；
-6. 每个人有且只有一次向housing office申请宿舍的机会（属于是开盲盒）。Housing office会随机分发有空的房子，有可能不是你希望申请的那一套。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
-7. 秋季入学的学生，建议4、5月即可开始找房，7、8、9月逐渐进入找房高峰。如在来前能找到心仪长租房，皆大欢喜。否则建议退而求其次采用备选方案，暂且放弃价格，舒适度，地段，便利程度等某个要求，先找个房住下注册好，至少有个落脚点，之后在漫漫求学过程中再换房。长期观望，可能导致最后扑空，因而不得不连续住几个月酒店，其性价比往往更低。以上建议仅供参考。
+1. UZH房源较少，上架后最多2天就会抢完，晚申请可能会进入wating list。可提前与Housing Office联系，询问什么时候上新房源，并在上架时间不停刷新网页；
+2. 点击No一栏可以让编号按时间排序，直接在最后几行看新上的房源；
+3. 年龄超过28岁的也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比28岁以下贵100-200CHF；
+4. 如果瑞士工作时间发邮件没有在3个小时内收到Housing Office回信，或填完link并回复邮件后超过一个小时没收到offer，建议检查垃圾邮件。如果垃圾邮件也没有，说明邮件太多你的消息可能被遗漏，可酌情再发邮件追问；
+5. 根据大家的分享，ETH给的都是半年，UZH大部分给的都是一年。理论上不可以转租；
+6. 每个人有且只有一次向Housing Office申请宿舍的机会（属于是开盲盒）。Housing Office会随机分发有空的房子，有可能不是你希望申请的那一套。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
+7. 秋季入学的新生，建议4、5月即可开始找房，7、8、9月苏黎世逐渐进入找房高峰。如在来前能找到心仪长租房，皆大欢喜。否则建议退而求其次采用备选方案，暂且放弃价格，舒适度，地段，便利程度等某个要求，先找个房住下注册好，至少有个落脚点，之后在漫漫求学过程中再换房。如果一直观望，则可能导致最后扑空，因而不得不连续住几个月酒店，其性价比往往更低。本条建议仅供参考。
 
 **致谢**：
 
-谢谢家萌（新生）、庆瑄（新生）、雅莹（新生）、岳妮（新生）提供以上关于在ETH\&UZH联办平台找房的极具价值和帮助作用的信息！
+谢谢家萌（新生）、庆瑄（新生）、雅莹（新生）、岳妮（新生）提供以上关于在[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)找房的极具价值和帮助作用的信息！
 
 前人栽树，后人乘凉。如你有重要信息想补充进《新生文档》，请联系邮箱info\@acssz.org，谢谢你的热心帮助！
 
@@ -60,15 +60,15 @@ Facebook群组链接：<https://www.facebook.com/groups/svzurich/>
 
 ^
 
-> [info] [wfs - wohnräume für studierende](https://www.wfss.ch/)
+> [info] [wfs - wohnräume für studierende](https://www.wfss.ch/) Living spaces for students&#x20;
 >
-> [学生WOKO](https://www.woko.ch/)：有基本家具，拎包入住。年龄限制28或以下。若博士在28岁前入住，之后可以续住。博士年收入超过26400CHF的，每月要多交100CHF
+> [学生WOKO](https://www.woko.ch/)：有基本家具，拎包入住。博士年收入超过26400CHF的，每月要多交100CHF
 >
-> [学生JUWO](https://www.juwo.ch/)：没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
+> [学生JUWO](https://www.juwo.ch/)：没有家具。年龄限制在16-28岁间，年收入不能超过30000CHF
 >
-> [学联论坛](https://forum.acssz.org/)
+> [学联论坛](https://forum.acssz.org/)：请自行甄别信息真实性，学联对任何租房信息都没有担保责任或义务
 >
-> 学生微信群聊（新生群、学联活动群、二手群、租房群等）
+> 学生微信群聊：新生群、学联活动群、二手群、租房群、搬家群等
 
 ^
 
