--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -82,10 +82,8 @@ Facebook群组链接：<https://www.facebook.com/groups/svzurich/>
 
 除此外，以下网站可尝试云找房，但多数情况下是需要现场看房的：
 
-> [WG Zimmer ](https://www.wgzimmer.ch/home.html)
->
-> （WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
-> [Flatfox](https://flatfox.ch/c/en/)
+> [WG Zimmer ](https://www.wgzimmer.ch/home.html)（WG是德语Wohngemeinschaft的缩写，译为共用公寓/合租房）
+> [Flatfox](https://flatfox.ch/c/en/)（可能比较偏好可以线下看房的客户，并且用德语申请的话也许回复率较高）
 > [comparis](https://en.comparis.ch/immobilien/search)
 > [RON ORP](http://www.ronorp.net/zuerich/dach-ueber-dem-kopf)
 >
@@ -94,5 +92,7 @@ Facebook群组链接：<https://www.facebook.com/groups/svzurich/>
 > [Students](http://www.students.ch/wohnen/list)
 >
 > [WG-Gesucht](https://www.wg-gesucht.de/)
+>
+> [Room Estate ](https://roomestate.com/)（房源大多可以查看在住人信息，并且可以在线预定租赁，但是真实体验未知）
 
 ^
