--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -93,8 +93,8 @@
 #### **4**. **报到证明**（**Meldebestätigung**/**Confirmation of registration**）
 
 新迁入苏黎世的人员在完成住址申报后会获得一张”报到证明“（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效（但办理Postpaid电话卡仍然需要居留证）。
-凭该确认函即可前往银行办理瑞士本地的银行卡（见[26 瑞士银行卡](26瑞士银行卡.md)）。
-虽然相比于正式的居留证，这张证明使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留卡）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张申报确认函上的参考号（具体根据所选报告方式有所不同）。
+凭该报到证明即可前往银行办理瑞士本地的银行卡（见[26 瑞士银行卡](26瑞士银行卡.md)）。
+虽然相比于正式的居留证，这张证明使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留卡）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张报到证明上的参考号（具体根据所选报告方式有所不同）。
 
 ^
 
