--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -32,8 +32,8 @@
 > [warning] **背景介绍**
 > 2023年6月12日起，苏黎世市区12个区的7个居委会重组为3个人口登记处（详见：[苏黎世市政府发布的相关消息](https://www.stadt-zuerich.ch/prd/de/index/ueber_das_departement/medien/medienmitteilungen/2023/maerz/230314a.html)），分别为：
 >
-> * 南城人口登记处（Personenmeldeamt Zürich Süd）
->   地址：Stadthausquai 17, 8001 Zürich（市政厅）
+> * **南城人口登记处（Personenmeldeamt Zürich Süd**）
+>   **地址：Stadthausquai 17, 8001 Zürich（市政厅**）
 >   电话：*待添加*
 >   网站：*待添加*
 > * 北城人口登记处（Personenmeldeamt Zürich Nord）
@@ -54,7 +54,7 @@
 **具体如下**：
 **1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
 
-* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记处**进行住址申报
+* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记处**进行住址申报（必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约，落地后再预约可能会排到很后的日期）
 * 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报，具体请参见所在区县的人口登记处官网
 
 **2. 对于从瑞士其他地区迁入苏黎世州的人员**：
@@ -85,7 +85,7 @@
 
 #### **3**. **预约办理居留卡**
 
-新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留卡，此项会在人口登记处的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留卡（见[28 居留卡办理](28移民局录指纹.md)）。
+新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留卡的日期和时间，此项会在人口登记处的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留卡（见[28 居留卡办理](28移民局录指纹.md)）。
 **关于时间选择**： 根据自身情况选择一个大致合适的时间即可，后期即使计划有变，亦可通过预约单上提供的网站更改时间。
 
 ^
