--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -78,7 +78,7 @@
 * 租房合同原件（如果你是转租合同，需要把二房东手里的原始合同也一起带过去，且最好二房东陪同前往）
 * 学期注册确认（Erweiterte Immatrikulationsbestätigung/Enrolment confirmation）
 
-同时，还需**带足200瑞郎**用于缴费（报到证明：40瑞郎；居留卡制证：142瑞郎；以及其它可能费用；现金/刷卡均可）。
+同时，还需**带足200瑞郎**用于缴费【报到证明：40瑞郎；居留卡制证：142瑞郎；以及其它可能费用。可刷卡（MasterCard、Visa卡可以，银联卡待核实），是否可现金待核实】
 ![](.topwrite/assets/image_1685710948287.png =507)
 
 ^
