--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -54,7 +54,7 @@
 **具体如下**：
 **1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
 
-* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记处**进行住址申报（必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期）
+* 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内**凭**[预约](https://www.etermin.net/personenmeldeamtsued)**前往南城人口登记处**进行住址申报（必须预约，预约当天可以早一点到，但千万别迟到。如你在入境前已找到房并确认会签署租房合同，建议根据入境日期尽早预约。在9月高峰期，落地后再预约可能会排到很后的日期。Stadthaus的Information Desk工作人员英语很好，人也友好，找不到路可以请他们帮忙带路）
 * 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记处进行住址申报，具体请参见所在区县的人口登记处官网
 
 **2. 对于从瑞士其他地区迁入苏黎世州的人员**：
