--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -12,13 +12,13 @@
 | 苏黎世州               | Kanton Zürich                                                | Canton of Zurich                                                                   |
 | 苏黎世市 / 苏黎世市区       | Stadt Zürich                                                 | City of Zurrich                                                                    |
 | 市县                 | Gemeinde                                                     | Community                                                                          |
-| 居委会（2023年6月12日起撤销） | Kreisbüro                                                    | District Office                                                                    |
+| 居委会（2023年6月12日起撤销） | Kreisbüro                                                    | District office                                                                    |
 | 人口登记处              | Personenmeldeamt&#xA;Einwohnerkontrolle&#xA;Einwohnerdienste | Residents' Registration Office&#xA;Residents' registration&#xA;Residents' Services |
 | 住址申报               | anmelden                                                     | register                                                                           |
-| 住址变更               | Addresseänderung                                             | change of residential address                                                      |
+| 住址变更               | Addresseänderung                                             | Change of residential address                                                      |
 | 住址注销               | abmelden                                                     | de-register                                                                        |
 | 报到证明               | Meldebestätigung                                             | Confirmation of registration                                                       |
-| 居留证                | Aufenthaltstitel                                             | residence permit                                                                   |
+| 居留证                | Aufenthaltstitel                                             | Residence permit                                                                   |
 
 ^
 
