--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -18,7 +18,7 @@
 | 住址变更               | Addresseänderung                                             | Change of residential address                                                      |
 | 住址注销               | abmelden                                                     | de-register                                                                        |
 | 报到证明               | Meldebestätigung                                             | Confirmation of registration                                                       |
-| 居留证                | Aufenthaltstitel                                             | Residence permit                                                                   |
+| 居留证/居留卡            | Aufenthaltstitel                                             | Residence permit                                                                   |
 
 ^
 
@@ -83,9 +83,9 @@
 
 ^
 
-#### **3**. **预约办理居留卡**
+#### **3**. **预约办理居留证**
 
-新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留卡的日期和时间，此项会在人口登记处的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留卡（见[28 居留卡办理](28移民局录指纹.md)）。
+新迁入苏黎世的人员在按上述流程完成首次住址申报后，还需要现场预约办理居留证的日期和时间，此项会在人口登记处的工作人员帮助下进行。预约完成后会获得预约单，须凭预约单在规定的时间前往移民局办理居留证（见[28 居留卡办理](28移民局录指纹.md)）。
 **关于时间选择**： 根据自身情况选择一个大致合适的时间即可，后期即使计划有变，亦可通过预约单上提供的网站更改时间。
 
 ^
@@ -94,7 +94,7 @@
 
 新迁入苏黎世的人员在完成住址申报后会获得一张”报到证明“（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效（但办理Postpaid电话卡仍然需要居留证）。
 凭该报到证明即可前往银行办理瑞士本地的银行卡（见[26 瑞士银行卡](26瑞士银行卡.md)）。
-虽然相比于正式的居留证，这张证明使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留卡）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张报到证明上的参考号（具体根据所选报告方式有所不同）。
+虽然相比于正式的居留证，这张证明使用频率相对较低，但是也应**妥善保管**（即使已获得正式居留证）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张报到证明上的参考号（具体根据所选报告方式有所不同）。
 
 ^
 
