--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -17,8 +17,8 @@
 | 住址申报               | anmelden                                                     | register                                                                           |
 | 住址变更               | Addresseänderung                                             | Change of residential address                                                      |
 | 住址注销               | abmelden                                                     | de-register                                                                        |
-| 报到证明               | Meldebestätigung                                             | Confirmation of registration                                                       |
-| 居留证/居留卡            | Aufenthaltstitel                                             | Residence permit                                                                   |
+| **报到证明**           | **Meldebestätigung**                                         | **Confirmation of registration**                                                   |
+| **居留证/居留卡**        | **Aufenthaltstitel**                                         | **Residence permit**                                                               |
 
 ^
 
