--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -4,7 +4,7 @@
 
 #### **1. 苏黎世州的住址申报体系介绍**
 
-（本章节内容2023年6月12日起适用）
+本章节内容自2023年6月12日起适用。
 本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，将非地名的翻译列表如下：
 
 | 本文使用的中文译名          | 对应的德语单词                                                      | 对应的英语单词（如有）                                                                        |
