--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -9,7 +9,7 @@
 #### **1. 租房交易提醒**：&#x20;
 
 * 经典骗钱套路是说你还没来瑞士，之后如果你反悔不租的话他不划算，请你转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！
-* 瑞士正规租房流程是押金账户（会有一个专门开设在你名下的银行账户来存放你交的押金，而不是放在房东或房产公司的账户里）+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。
+* 瑞士正规租房流程是押金账户【会有一个专门开设在你名下的银行账户（房东/中介会帮你开户，需要你授权签字）来存放你交的押金，而不是放在房东或房产公司的账户里】+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。
 * Debit储蓄卡可以正式汇款/转账（Zahlung），但Prepaid卡不行。请避免将大量金额一次性充入Prepaid卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易。
 
 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款给房东”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
