--- a/02落地事项.md
+++ b/02落地事项.md
@@ -4,17 +4,17 @@
 
 （按时间先后顺序）
 
-| 需办理事项                                 | 所需材料/信息                                                                             | 办理后获得                                                                                              | 推荐办理时间                                          |
-| ------------------------------------- | ----------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
-| [办理Swisspass交通卡](21交通票.md)            | - 护照&#xA;- 本人证件照&#xA;- 居住地址或c/o地址（用于邮寄实体卡）&#xA;- 足量瑞郎现金（具体计算详见“[21 交通票](21交通票.md)”） | 1. 一张临时的办理证明（当场发放）&#xA; 2\. 一张Swisspass交通实体卡（数周后邮寄）&#xA; *收到实体卡后可自行在SBB Mobile 应用上登记为电子卡*          | 入境落地后可立刻办理，便于乘坐交通&#xA;&#xA;（否则每次出行都需要单独买票，费用很高） |
-| [办理Prepaid电话卡（学联福利）](22prepaid电话卡.md) | - 护照&#xA;- 任一新生身份证明文件                                                               | Prepaid实体电话卡或eSIM卡&#xA;*只有Prepaid实体卡才能享受学联福利，eSIM卡无法享受*                                            | 可根据落地时间提前在小程序预约办卡时间                             |
-| [在学校办理注册](23学校注册.md)                  | - 护照                                                                                | 1. 学生卡（Legi）&#xA;2\. 学校开具的”学期注册确认书“（*EN: Enrolment Confirmation；DE:  Immatrikulationsbestätigung*） | 可提前邮寄，或落地后尽快办理，&#xA;请注意查看学校窗口的开放时间              |
-| [找房租房](24找房租房.md)                     | - 护照                                                                                | 1. 租房合同&#xA; 2\. 房间现状检查确认清单                                                                        |                                                 |
-| [住址申报](25住址的申报与注销.md)&#xA;*同时预约办理居留证* | - 护照&#xA;- 租房合同&#xA;- 本人证件照（需要核实）&#xA;- 学校开具的”学期注册确认书“&#xA;- 手机号&#xA;- 200瑞郎现金      | - 申报确认函 （*DE:  Meldebestätigung*）&#xA;*这张确认函务必保存好避免丢失*&#xA; \- 居留证办理预约单                            | 拿到学校的”学期注册确认书“以及租房合同后                           |
-| [办理瑞士银行卡](26瑞士银行卡.md)                 | - 护照&#xA; \- 申报确认函&#xA;- 学校开具的”学期注册确认书“&#xA;- 手机号                                   | 1. 相关合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                         | 完成学校注册、租房及住址申报后                                 |
-| [办理保险（学联福利）申请豁免](27保险及豁免.md)          | - 护照&#xA;- 申报确认函&#xA;- 学校开局的”学期注册确认书“&#xA;- 手机号&#xA;- 瑞士银行卡（便于缴费及报销）                | 1. 卫生局关于就保险信息进行报备的信函&#xA;（*完成住址申报后一段时间通过邮寄方式发送*）&#xA; 2\. 保险相关文件                                   | 完成学校注册、租房、住址申报及银行卡办理后                           |
-| [办理居留证](28居留证的办理.md)&#xA;（需要进行指纹录入）   | - 预约单&#xA;- 护照&#xA; \- 申报确认函&#xA;- 居住地址（用于邮寄居留证）&#xA; \- 100瑞郎（现金/刷卡）               | 正式居留证（DE: Aufenthaltsbewilligung）（办理后数周通过挂号信方式寄送）                                                  | 严格遵守预约时间前往                                      |
-| [Postpaid电话卡（学联福利）](22prepaid电话卡.md)  | - 居留卡&#xA;- 学生卡                                                                     | 1. Postpaid实体电话卡（携号转卡），或&#xA;2\. Postpaid eSIM卡                                                    | *如果办理了Prepaid卡，最早在办理 Prepaid 30天后可携号转卡*         |
+| 需办理事项                                 | 所需材料/信息                                                                             | 办理后获得                                                                                                               | 推荐办理时间                                            |
+| ------------------------------------- | ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------- |
+| [办理Swisspass交通卡](21交通票.md)            | - 护照&#xA;- 本人证件照&#xA;- 居住地址或c/o地址（用于邮寄实体卡）&#xA;- 足量瑞郎现金（具体计算详见“[21 交通票](21交通票.md)”） | 1. 一张临时的办理证明（当场发放）&#xA; 2\. 一张Swisspass交通实体卡（数周后邮寄，收到实体卡后可在SBB Mobile App上登记为电子卡）                                   | 落地入境后可立刻办理，便于乘坐交通&#xA;&#xA;（否则每次出行都需要单独买票，费用很高）   |
+| [办理Prepaid电话卡（学联福利）](22prepaid电话卡.md) | - 护照&#xA;- 任一新生身份证明文件                                                               | Prepaid实体电话卡或eSIM卡（只有Prepaid实体卡才能享受学联福利，eSIM卡无法享受）                                                                  | 可根据落地时间提前在预约小程序预约办卡时间，推荐落地当天机场办理或第二天在市区开卡点办理      |
+| [在学校办理注册](23学校注册.md)                  | - 护照                                                                                | 1. 学生卡（Legi）&#xA;2\. 学校开具的”学期注册确认书“（EN: Enrolment Confirmation；DE:  Immatrikulationsbestätigung）&#xA;3\. 个人校园账号密码文件 | ETH可提前邮寄，或落地后领取&#xA;UZH落地后领取&#xA;请注意查看学校领取窗口的开放时间 |
+| [找房租房](24找房租房.md)                     | - 护照                                                                                | 1. 租房合同&#xA;2\. 房间现状检查确认清单                                                                                          | 越快越好                                              |
+| [预约住址申报](25住址的申报与注销.md)&#xA;同时预约办理居留证 | - 护照&#xA;- 租房合同&#xA;- 学校开具的”学期注册确认书“&#xA;- 手机号&#xA;- 200瑞郎现金                        | - 申报确认函 （DE:  Meldebestätigung，EN: registration confirmation，这张确认函务必保存好，不要丢失）&#xA; \- 居留证办理预约单                      | 拿到学校的”学期注册确认书“以及租房合同后，严格按照约定时间前往，可提前但不可晚到         |
+| [办理瑞士银行卡](26瑞士银行卡.md)                 | - 护照&#xA;- 申报确认函&#xA;- 学校开具的”学期注册确认书“&#xA;- 手机号                                     | 1. 相关合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                                          | 完成学校注册、租房及住址申报后                                   |
+| [办理保险（学联福利）并申请豁免](27保险及豁免.md)         | - 护照&#xA;- 申报确认函&#xA;- 学校开局的”学期注册确认书“&#xA;- 手机号&#xA;- 瑞士银行卡（便于缴费及报销）                | 1. 卫生局要求报备保险信息的信函（完成住址申报后一段时间通过邮寄方式发送）&#xA;2\. 保险公司的保险policy相关文件&#xA;3\. （完成豁免后）卫生局的豁免确认信                           | 完成学校注册、租房、住址申报及银行卡办理后，入境三个月内必须办理                  |
+| [办理居留证](28居留证的办理.md)&#xA;（需要进行指纹录入）   | - 预约单&#xA;- 护照&#xA;- 申报确认函&#xA;- 居住地址（用于邮寄居留证）                                      | 正式居留证（DE: Aufenthaltstitel, EN: residence permit）（办理后数周通过挂号信方式寄送）                                                   | 严格按照约定时间前往，可提前但不可晚到                               |
+| [Postpaid电话卡（学联福利）](22prepaid电话卡.md)  | - 居留卡&#xA;- 学生卡                                                                     | 1. Postpaid实体电话卡（携号转卡），或&#xA;2\. Postpaid eSIM卡                                                                     | 如果办理了Prepaid卡，最早在办理Prepaid的30天后可携号转卡              |
 
 ^
 
@@ -24,26 +24,26 @@
 :::tab[入境前未找到房（**无租房合同**）]
 1\. 入境前先找好临时住处（酒店、Airbnb、借宿等），尽量在一周以上（具体根据自身情况而定）;
 
-2\. 办理[Swisspass交通卡](21交通票.md)，拿到临时交通卡证明（落地后在机场或各火车站可以办理）;
-*Tips：若落地较晚，无法办理交通卡，可在机器上先购买单程票回到住处。第二天到附近的火车站办理一个月的Swisspass交通卡。等有稳定住处后，可到柜台把该交通卡换成年卡等，并可抵扣部分费用*。
+2\. 入境落地后尽快办理[Swisspass交通卡](21交通票.md)，拿到临时交通卡证明（落地后在机场或各火车站可以办理）;
+Tips：若落地时间较晚SBB柜台已关闭，无法办理交通卡，可在自动售票机上先购买单程票回到住处。第二天到附近的火车站办理一个月的Swisspass交通卡。等有稳定住处后，可到柜台把该交通卡换成年卡等，可抵扣部分费用。
 
-3\. 办理[Prepaid电话卡](22prepaid电话卡.md)（学联福利，须提前一天预约）；
+3\. 办理[Prepaid电话卡](22prepaid电话卡.md)（学联福利，须提前预约，推荐落地当天机场办理或第二天市内开卡点办理）；
 
-4\. [学校报到](23学校注册.md)；
+4\. [学校报到领新生材料](23学校注册.md)；
 
 5\. [找房、租房](24找房租房.md);
 
-6\. 若在14天内没有找到住处，**必须于入境起14天内前往临时住处所属的居委会，向工作人员说明自己的情况**，让工作人员进行登记，以免成为“黑户”；
+6\. 若预计在14天内没有找到住处，**必须于入境起14天内前往苏黎世南城人口登记办公室**（**Personenmeldeamt Zürich Süd**），**向工作人员说明自己的情况**，让工作人员进行临时记录，以免成为“黑户”；
 
-7\. 找到房子签署并拿到租房合同；
+7\. 找到房子，签署正式租房合同；
 
-8\. 去正式住处所属的[居委会报到](25居委会报到.md)，拿到报到证明（Meldebestätigung），预约移民局录指纹日期；
+8\. 去[苏黎世南城人口登记办公室报到](25住址的申报与注销.md)，拿到报到证明（Meldebestätigung），预约移民局录指纹日期；
 
 9\. 办理[银行卡](26瑞士银行卡.md)（需要护照、学校注册证明、Meldebestätigung、电话号和居住地址用于核实身份并邮寄材料）；
 
-10\. 在入境3个月内[购买保险并申请保险豁免](27保险及豁免.md)（[Swisscare学联专属折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)）；
+10\. 在入境3个月内[购买保险并申请保险豁免](27保险及豁免.md)（[学联专属Swisscare折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)）；
 
-11\. [办理居留证](28居留证的办理.md)，等待收到 Permit / Aufenthaltstitel 居留卡；
+11\. [移民局录指纹](28居留证的办理.md)，以便签发正式居留证，等待收到 residence permit / Aufenthaltstitel 居留卡；
 
 12\. 收到居留卡后，办理[Postpaid电话卡](22prepaid电话卡.md)（学联福利）。
 :::
