--- a/26瑞士银行卡.md
+++ b/26瑞士银行卡.md
@@ -14,7 +14,13 @@
 | 汇率       | Mastercard exchange rate + 0.5% 有评价是比较吃亏，但无processing fee                                                                                                                                          | PostFinance自己的汇率，有评价是比较实惠，且转账给欧元区免费                                                                                                                                      | ZKB自己的汇率，有评价是一般，但转账给欧元区免费                                                                                                                      |
 | 其它注意事项   | Debit card类型尽量选Visa或者Mastercard，另外两种（V PAY 或者 Maestro）功能少一些                                                                                                                                        |                                                                                                                                                                          | 据说Prepaid卡接受程度较低                                                                                                                               |
 
-**有美国经历同学在UBS开户请注意**：因为美国和瑞士之间的协议，如果你在美国学习/工作/实习过，**护照上有美国F1/J1和H类签证记录**，**必须去UBS总行（Bahnhofstrasse 45）开户，且必须提前预约**，不能直接walk-in。如你在美国工作或实习过，UBS需要你在美国的Social Security Number (SSN，用于报税)，并审核你的Tax Record。
+**有美国经历同学在UBS开户请注意**：
+
+因为美国和瑞士之间的协议，如果你在美国学习/工作/实习过，**护照上有美国F1/J1和H类签证记录**，**必须去UBS总行（Bahnhofstrasse 45）开户，且必须提前预约**，不能直接walk-in。如你在美国工作或实习过，UBS需要你在美国的Social Security Number (SSN，用于报税)，并审核你的Tax Record。
+
+据真实经历反馈，如果你之前在但是2023年不在美国，则UBS可能不会进行调查，但依然建议准备好SSN并带上美国的银行卡等以备调查。如果没有SSN，则UBS可能根据你的个人情况询问你在美国哪里上过学，有没有被雇佣过，有没有美国银行卡账户等（case by case）。
+
+总的来说，不必过于紧张。根据UBS反馈，国际学生一般不会有问题。但如果你有美国护照/绿卡，则审核会很严格。
 
 ^
 
