--- a/02落地事项.md
+++ b/02落地事项.md
@@ -8,7 +8,7 @@
 | ------------------------------------- | ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------- |
 | [办理Swisspass交通卡](21交通票.md)            | - 护照&#xA;- 本人证件照&#xA;- 居住地址或c/o地址（用于邮寄实体卡）&#xA;- 足量瑞郎现金（具体计算详见“[21 交通票](21交通票.md)”） | 1. 一张临时的办理证明（当场发放）&#xA; 2\. 一张Swisspass交通实体卡（数周后邮寄，收到实体卡后可在SBB Mobile App上登记为电子卡）                                   | 落地入境后可立刻办理，便于乘坐交通&#xA;&#xA;（否则每次出行都需要单独买票，费用很高）   |
 | [办理Prepaid电话卡（学联福利）](22prepaid电话卡.md) | - 护照&#xA;- 任一新生身份证明文件                                                               | Prepaid实体电话卡或eSIM卡（只有Prepaid实体卡才能享受学联福利，eSIM卡无法享受）                                                                  | 可根据落地时间提前在预约小程序预约办卡时间，推荐落地当天机场办理或第二天在市区开卡点办理      |
-| [在学校办理注册](23学校注册.md)                  | - 护照                                                                                | 1. 学生卡（Legi）&#xA;2\. 学校开具的”学期注册确认书“（EN: Enrolment Confirmation；DE:  Immatrikulationsbestätigung）&#xA;3\. 个人校园账号密码文件 | ETH可提前邮寄，或落地后领取&#xA;UZH落地后领取&#xA;请注意查看学校领取窗口的开放时间 |
+| [大学注册与领新生材料](23大学相关.md)               | - 护照                                                                                | 1. 学生卡（Legi）&#xA;2\. 学校开具的”学期注册确认书“（EN: Enrolment Confirmation；DE:  Immatrikulationsbestätigung）&#xA;3\. 个人校园账号密码文件 | ETH可提前邮寄，或落地后领取&#xA;UZH落地后领取&#xA;请注意查看学校领取窗口的开放时间 |
 | [找房租房](24找房租房.md)                     | - 护照                                                                                | 1. 租房合同&#xA;2\. 房间现状检查确认清单                                                                                          | 越快越好                                              |
 | [住址申报](25住址的申报与注销.md)&#xA;同时预约办理居留证   | - 护照&#xA;- 租房合同&#xA;- 学校开具的”学期注册确认书“&#xA;- 手机号&#xA;- 200瑞郎（刷卡/现金）                   | - 申报确认函 （DE:  Meldebestätigung，EN: registration confirmation，这张确认函务必保存好，不要丢失）&#xA; \- 居留证办理预约单                      | 拿到学校的”学期注册确认书“以及租房合同后，严格按照约定时间前往，可提前但不可晚到         |
 | [办理瑞士银行卡](26瑞士银行卡.md)                 | - 护照&#xA;- 申报确认函&#xA;- 学校开具的”学期注册确认书“&#xA;- 手机号                                     | 1. 相关合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                                          | 完成学校注册、租房及住址申报后                                   |
